--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -43,7 +43,7 @@
                             android:layout_height="wrap_content"
                             android:layout_below="@+id/title"
                             android:layout_alignParentLeft="true"
-                            android:paddingVertical="12dp"
+                            android:paddingBottom="12dp"
                             android:paddingLeft="12dp"
                             android:text="Link"
                             android:textColor="@color/purple_200" />
@@ -54,7 +54,7 @@
                             android:layout_height="wrap_content"
                             android:layout_below="@+id/title"
                             android:layout_toRightOf="@+id/link"
-                            android:paddingVertical="12dp"
+                            android:paddingBottom="12dp"
                             android:paddingRight="12dp"
                             android:text="Time" />
 
